[*]BO : Fixed Overlapping .css
Fixed Overlapping .css

--- a/css/admin.css
+++ b/css/admin.css
@@ -14,7 +14,7 @@ body {
 .floatr {float:right}
 
 a img {
-	border: 5;
+	border: 0;
 }
 
 a {
@@ -35,7 +35,7 @@ a.link {
 	text-decoration: underline;
 }
 .warn a{
-	text-decoration: underline;
+	text-decoration: none;
 }
 
 img {
@@ -54,8 +54,8 @@ p {
 hr {
 	border: none;
 	padding: 0;
-	margin-top: 10px;
-	margin-bottom: 10px;
+	margin-top: 15px;
+	margin-bottom: 15px;
 }
 
 .block {
